--- a/crane_1.html
+++ b/crane_1.html
@@ -4,6 +4,8 @@
 	<title>Crane Origami</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
     <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
@@ -150,35 +152,49 @@
 
 
     <!-- Title -->
-    
-    <div class="crane-container">
-        <div class="text-left px-56">
-            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">This is the back of the paper. <br>(Usually, it is white.)
-                </h1>
-            <div id="popup" class="popup">
-              <br>
-              <h1>3D Model View</h1>
-                <iframe
-                  id="sketchfabIframe"
-                  src=""
-                  frameborder="0"
-                  allow="autoplay; fullscreen; vr"
-                  mozallowfullscreen="true"
-                  webkitallowfullscreen="true">
-                </iframe>
-                <button id="closeButton">Close</button>
-              </div>
-            
-            <img class="h-auto max-w-lg mx-auto rounded-lg" src="images/crane_tutorial/2.jpg" alt="Final product of Crane Origami">
-        </div>
+    <div class="text-left px-56">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Crane Tutorial</h1>
     </div>
+    <div class="card-group px-52 h-auto w-auto">
+        <div class="card">
+            <img src="images/crane_tutorial/4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-center">Unfold the previous step.</h5>
+            </div>
+          </div>
+        <div class="card">
+          <img src="images/crane_tutorial/5.jpg" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title">Fold the right edge over to the left edge.</h5>
+          </div>
+        </div>
+        <div class="card">
+            <img src="images/crane_tutorial/6.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Unfold the previous step.</h5>
+            </div>
+          </div>
+          <div id="popup" class="popup">
+            <br>
+            <h1>3D Model View</h1>
+              <iframe
+                id="sketchfabIframe"
+                src=""
+                frameborder="0"
+                allow="autoplay; fullscreen; vr"
+                mozallowfullscreen="true"
+                webkitallowfullscreen="true">
+              </iframe>
+              <button id="closeButton">Close</button>
+            </div>
+      </div>
 
 
     <button id="openButton"> 3D </button>
 
     <div class="container">
 
-        <a href="crane.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
+        <a href="crane_stepbystep.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
@@ -186,7 +202,7 @@
         Previous
         </a>
         <!-- Next Button -->
-        <a href="crane_2.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
+        <a href="crane_upload.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         Next
         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
