--- a/crane_stepbystep.html
+++ b/crane_stepbystep.html
@@ -4,6 +4,8 @@
 	<title>Crane Origami</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
     <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
@@ -150,28 +152,44 @@
 
 
     <!-- Title -->
-    
-    <div class="crane-container">
-        <div class="text-left px-56">
-            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Get a piece of Origami paper.<br> This is the front of the paper. <br>
-                The crane will end up in this color.</h1>
-            <div id="popup" class="popup">
-              <br>
-              <h1>3D Model View</h1>
-                <iframe
-                  id="sketchfabIframe"
-                  src=""
-                  frameborder="0"
-                  allow="autoplay; fullscreen; vr"
-                  mozallowfullscreen="true"
-                  webkitallowfullscreen="true">
-                </iframe>
-                <button id="closeButton">Close</button>
-              </div>
-            
-            <img class="h-auto max-w-lg mx-auto rounded-lg" src="images/crane_tutorial/1.jpg" alt="Final product of Crane Origami">
-        </div>
+    <div class="text-left px-56">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Crane Tutorial</h1>
     </div>
+    <div class="card-group px-52 h-auto w-auto">
+        <div class="card">
+            <img src="images/crane_tutorial/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-center">Get a piece of Origami paper.<br> This is the front of the paper. <br>
+                The crane will end up in this color.</h5>
+            </div>
+          </div>
+        <div class="card">
+          <img src="images/crane_tutorial/2.jpg" class="card-img-top" alt="...">
+          <div class="card-body text-center">
+            <h5 class="card-title">This is the back of the paper. <br>(Usually, it is white.)</h5>
+          </div>
+        </div>
+        <div class="card">
+            <img src="images/crane_tutorial/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">To begin, we will fold a 'square/preliminary base'. 
+                <br>Fold the bottom edge up to the top edge.</h5>
+            </div>
+          </div>
+          <div id="popup" class="popup">
+            <br>
+            <h1>3D Model View</h1>
+              <iframe
+                id="sketchfabIframe"
+                src=""
+                frameborder="0"
+                allow="autoplay; fullscreen; vr"
+                mozallowfullscreen="true"
+                webkitallowfullscreen="true">
+              </iframe>
+              <button id="closeButton">Close</button>
+            </div>
+      </div>
 
 
     <button id="openButton"> 3D </button>
