--- a/template.html
+++ b/template.html
@@ -50,18 +50,19 @@
 				  <!-- Profile dropdown -->
 				  <div class="relative ml-3">
 					<div>
-					  <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-						<span class="absolute -inset-1.5"></span>
-						<span class="sr-only">Open user menu</span>
-						<img class="h-8 w-8 rounded-full" src="images/malcom.jpg" alt="">
-					  </button>
-					</div>
+					  <button name="dropdown-toggle" id="dropdown-toggle" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 border-none">
+              <span class="absolute -inset-1.5"></span>
+              <span class="sr-only">Open user menu</span>
+              <img class="h-16 w-16 rounded-full" src="images/malcom.jpg" alt="">
+            </button>
+            
+            <!-- Add the dropdown menu with a class to control its visibility -->
+            <div name ="dropdown-menu" id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-labelledby="dropdown-toggle" tabindex="-1">
+              <a href="profile.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Your Profile</a>
+              <a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Login</a>
+              <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" id="user-menu-item-2" onclick="clearLocalStorage()">Sign out</a>
+            </div>
 
-					<div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-			 			<a href="profile.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-						<a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Login</a>
-						<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2" onclick="clearLocalStorage()">Sign out</a>
-					  </div>
 				  </div>
 				</div>
 			  </div>
@@ -149,7 +150,22 @@
       </div>
     </div>
 </footer>
+<script>
+const dropdownToggle = document.getElementById('dropdown-toggle');
+const dropdownMenu = document.getElementById('dropdown-menu');
 
+// Toggle the 'hidden' class on the dropdown menu when the button is clicked
+  dropdownToggle.addEventListener('click', () => {
+  dropdownMenu.classList.toggle('hidden');
+});
+
+// Close the dropdown menu when clicking outside of it
+document.addEventListener('click', (event) => {
+  if (!dropdownMenu.contains(event.target) && !dropdownToggle.contains(event.target)) {
+  dropdownMenu.classList.add('hidden');
+  }
+});
+</script>
 
 </body>
 </html>
