--- a/tutorial.html
+++ b/tutorial.html
@@ -1,85 +1,81 @@
-	<!DOCTYPE html>
-	<html>
-	<head>
-		<title>Tutorials</title>
-		<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
-		<link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
-		<script src="https://cdn.tailwindcss.com"></script>
-		<script src="javascript/signout.js"></script>
-		<script src="javascript/dropdown.js"></script>
-		<script src="javascript/points.js"></script>
-	</head>
-	<body>
-	
-		<!-- Navigation Bar -->
-		<header>
-			<nav id="navbar" class="background-color: #F4F4ED;">
-				<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-				  <div class="relative flex h-16 items-center justify-between">
-					<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-	
-					  <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
-						<span class="absolute -inset-0.5"></span>
-						<span class="sr-only">Open main menu</span>
-	
-						<svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-						  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-						</svg>
-	
-						<svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-						  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-						</svg>
-					  </button>
-					</div>
-					<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-						<div class="flex flex-shrink-0 items-center">
-							<a href="index.html">
-								<img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
-							</a>
-						</div>
-					  <div class="hidden sm:ml-6 sm:block">
-						<div class="flex space-x-4 mt-4">
-	
-						  <a href="about.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">About</a>
-						  <a href="tutorial.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Tutorials</a>
-						  <a href="shop.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Shop</a>
-						  <a href="contact.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Contact Us</a>
-						</div>
-					  </div>
-					</div>
-					<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-	
-					  <!-- Profile dropdown -->
-					  <div class="relative ml-3">
-						<div>
-						  <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-							<span class="absolute -inset-1.5"></span>
-							<span class="sr-only">Open user menu</span>
-							<img class="h-8 w-8 rounded-full" src="images/malcom.jpg" alt="">
-						  </button>
-						</div>
-	
-						<div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-							 <a href="profile.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-							<a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Login</a>
-							<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2" onclick="clearLocalStorage()">Sign out</a>
-						  </div>
-					  </div>
-					</div>
-				  </div>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Tutorials</title>
+	<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
+	<link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
+	<script src="https://cdn.tailwindcss.com"></script>
+	<script src="javascript/signout.js"></script>
+	<script src="javascript/dropdown.js"></script>
+	<script src="javascript/points.js"></script>
+</head>
+<body>
+
+	<!-- Navigation Bar -->
+	<header>
+		<nav id="navbar" class="background-color: #F4F4ED;">
+			<div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+				<div class="relative flex h-16 items-center justify-between">
+				<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+
+					<button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+					<span class="absolute -inset-0.5"></span>
+					<span class="sr-only">Open main menu</span>
+
+					<svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+					</svg>
+
+					<svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+					</svg>
+					</button>
 				</div>
-			  
-				<div class="sm:hidden" id="mobile-menu">
-				  <div class="space-y-1 px-2 pb-3 pt-2">
-					<a href="#" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Dashboard</a>
-					<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Team</a>
-					<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Projects</a>
-					<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
-				  </div>
+				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+					<div class="flex flex-shrink-0 items-center">
+						<a href="index.html">
+							<img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+						</a>
+					</div>
+					<div class="hidden sm:ml-6 sm:block">
+					<div class="flex space-x-4 mt-4">
+
+						<a href="about.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">About</a>
+						<a href="tutorial.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Tutorials</a>
+						<a href="shop.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Shop</a>
+						<a href="contact.html" class="text-gray-900 hover:bg-indigo-500 hover:text-white rounded-md px-3 py-2 text-xl font-medium">Contact Us</a>
+					</div>
+					</div>
 				</div>
-			  </nav>
-			  
-		</header>
+				<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+
+					<!-- Profile dropdown -->
+					<div class="relative ml-3">
+					<div>
+						<button name="dropdown-toggle" id="dropdown-toggle" class="flex rounded-full bg-gray-800 text-sm focus:outline-none border-none">
+				<span class="absolute -inset-1.5"></span>
+				<span class="sr-only">Open user menu</span>
+				<img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="">
+			</button>
+			
+			<!-- Add the dropdown menu with a class to control its visibility -->
+			<div name ="dropdown-menu" id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5
+				focus:outline-none hidden" role="menu" aria-labelledby="dropdown-toggle" tabindex="-1">
+				<a href="profile.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Your Profile</a>
+				<a href="rewards.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Rewards</a>
+				<a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Login</a>
+				<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" id="user-menu-item-2" onclick="clearLocalStorage()">Sign out</a>
+			</div>
+
+					</div>
+				</div>
+				</div>
+			</div>
+			
+			</div>
+			</nav>
+			
+	</header>
 	
 	<br>
 	<br>
