--- a/shop_origami.html
+++ b/shop_origami.html
@@ -91,7 +91,7 @@
 			<svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
 				<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
 			</svg>
-			<a href="tutorial.html" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Shop</a>
+			<a href="shop.html" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Shop</a>
 			</div>
 		</li>
 		<li aria-current="page">
@@ -105,16 +105,15 @@
 	</nav>
 
     <!-- Title -->
-    <div class=" px-60">
-        <div class="text-left px-50">
-            <h1 class="py-10 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">Shop</h1>
+    <div class=" px-40">
+        <div class="text-left">
+            <h1 class="py-10 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">Origami Paper</h1>
         </div>
     </div>
 
     <!--- Shop -->
     <div class="bg-white">
-        <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-        <h2 class="text-2xl font-bold tracking-tight text-gray-900">Origami Paper</h2>
+        <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-3 lg:max-w-7xl lg:px-8">
         
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
