--- a/cart.html
+++ b/cart.html
@@ -74,7 +74,7 @@
 		  </nav>
 		  
 	</header>
-
+<div class="flex">
 <div class="shopping-cart">
   <!-- Title -->
   <div class="title">
@@ -180,6 +180,7 @@
             <button id="button" name="submit"type="submit" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Submit</button>
         </div> 
     </form>
+</div>
 </div>
 </body>
  
