--- a/crane_stepbystep.html
+++ b/crane_stepbystep.html
@@ -111,6 +111,9 @@
 		  
 	</header>
 
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
     
 <!-- Breadcrumbs -->
 <nav class="flex px-28 py-11" aria-label="Breadcrumb">
@@ -194,7 +197,7 @@
 
     <button id="openButton"> 3D </button>
 
-    <div class="container">
+    <div class="container h-25 py-10">
 
         <a href="crane.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
